--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,24 @@
         {
             "type": "lldb",
             "request": "launch",
+            "name": "Debug executable 'rfb' at root",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--bin=rfb",
+                    "--package=rfb"
+                ],
+                "filter": {
+                    "name": "rfb",
+                    "kind": "bin"
+                }
+            },
+            "args": ["/"],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
             "name": "Debug executable 'rfb'",
             "cargo": {
                 "args": [
