--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,5 @@ tokio-util = "0.7.10"
 futures = "0.3.29"
 chrono = "0.4.31"
 clap = { version = "4.4.11", features = ["derive"] }
-probably_binary = { version = "0.1.0", path = "../probably_binary" }
 number_prefix = "0.4.0"
+probably_binary = { version = "0.1.0", path = "probably_binary" }
