--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ publish = false
 [dependencies]
 color-eyre = "0.6.2"
 crossterm = { version = "0.27.0", features = ["event-stream"] }
-ratatui = "0.24.0"
+ratatui = { path = "C:\\Users\\psobo\\source\\ratatui" }
 tokio = { version = "1.34.0", features = ["full"] }
 tokio-util = "0.7.10"
 futures = "0.3.29"
